main/default/objects/Quick_Check__c/Quick_Check__c.object-meta.xml
<CustomObject>
    <description>For Interactive questions for participants to complete pulse checks and targeted learning questions with real-time answer checking and messaging for correct and incorrect responses.</description>
    <label>Quick Check</label>
    <nameField>
        <label>Quick Check Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quick Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>