main/default/objects/Quick_Check__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Active</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>