main/default/objects/Quick_Check__c/fields/Add_Milestone_to_Journey__c.field-meta.xml
<CustomField>
    <fullName>Add_Milestone_to_Journey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Creates Milestone to a journey when checked</description>
    <label>Add Milestone to Journey</label>
    <type>Checkbox</type>
</CustomField>