main/default/objects/Quick_Check__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to a Campaign</description>
    <label>Campaign</label>
    <referenceTo>Campaign__c</referenceTo>
    <relationshipLabel>Quick Checks</relationshipLabel>
    <relationshipName>Quick_Checks</relationshipName>
    <type>Lookup</type>
</CustomField>