main/default/objects/Quick_Check__c/fields/Quick_Check_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Quick_Check_End_Date__c</fullName>
    <description>Quick Check End Date</description>
    <label>Quick Check End Date</label>
    <type>Date</type>
</CustomField>