main/default/objects/Quick_Check__c/fields/Quick_Check_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Quick_Check_Start_Date__c</fullName>
    <description>Quick Check Start Date</description>
    <label>Quick Check Start Date</label>
    <type>Date</type>
</CustomField>