main/default/objects/Quick_Check__c/fields/Quick_Check_Style__c.field-meta.xml
<CustomField>
    <fullName>Quick_Check_Style__c</fullName>
    <label>Quick Check Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cambi Widget</fullName>
            </value>
            <value>
                <fullName>Journey Card</fullName>
                <default>true</default>
                <label>Journey Card</label>
            </value>
            <value>
                <fullName>Quiz Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>