main/default/objects/Quick_Check__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Quick_Check_Style__c</columns>
    <columns>Quick_Check_Start_Date__c</columns>
    <columns>Quick_Check_End_Date__c</columns>
    <columns>Active__c</columns>
    <columns>Add_Milestone_to_Journey__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>